feat: Update search functionality and UI layout

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,9 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  background-color:#ddd;
+}
 :root {
   --color-background:red;
   --color-foreground: #171717;
